# ODIEngine

./: CMakeLists.txt  LICENSE  README.md
examples/: chat_example.cpp  simple_inference.c
include/odi/: odi_engine.h  odi_error.h  odi_types.h
src/: odi_engine.cpp
src/compute/: backend.hpp
src/compute/cpu/: cpu_backend.cpp  cpu_backend.hpp  simd_ops.hpp
src/core/: context.cpp  context.hpp  engine.cpp  engine.hpp  model.cpp  model.hpp  sampler.cpp  sampler.hpp  tokenizer.cpp  tokenizer.hpp
src/format/: gguf_parser.cpp  gguf_parser.hpp  gguf_types.hpp
src/tensor/: tensor.cpp  tensor.hpp
tests/: test_gguf_parser.cpp  test_tensor.cpp
